--- a/index.html
+++ b/index.html
@@ -87,6 +87,175 @@
        </section>
     <!-- Logo section start -->
 
+    <!-- Product section start -->
+      <section class="product-section">
+        <div class="container">
+            <div class="product-details">
+                <img src="image/tripod.png" alt="image" class="images-width">
+                <h2>Flex Tripod</h2>
+                <h3>$50.48</h3>
+                <div class="rating-sec">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <span class="star-point">4.99</span>
+                </div>
+                <div class="product-info">
+                    <p>Wordwide shifting available</p>
+                    <p>Buyers protection possible!</p>
+                </div>
+            </div>
+
+            <div class="product-details">
+                <img src="image/mic.png" alt="image" class="images-width">
+                <h2>microphone</h2>
+                <h3>$120.25</h3>
+                <div class="rating-sec">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <span class="star-point">4.99</span>
+                </div>
+                <div class="product-info">
+                    <p>Wordwide shifting available</p>
+                    <p>Buyers protection possible!</p>
+                </div>
+            </div>
+
+            <div class="product-details">
+                <img src="image/airpod.png" alt="image" class="images-width">
+                <h2>Airbuds</h2>
+                <h3>$100.00</h3>
+                <div class="rating-sec">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <span class="star-point">4.99</span>
+                </div>
+                <div class="product-info">
+                    <p>Wordwide shifting available</p>
+                    <p>Buyers protection possible!</p>
+                </div>
+            </div>
+
+            <div class="product-details">
+                <img src="image/drone.png" alt="image" class="images-width">
+                <h2>Drone</h2>
+                <h3>$980.25</h3>
+                <div class="rating-sec">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <span class="star-point">4.99</span>
+                </div>
+                <div class="product-info">
+                    <p>Wordwide shifting available</p>
+                    <p>Buyers protection possible!</p>
+                </div>
+            </div>
+
+            <div class="product-details">
+                <img src="image/lights.png" alt="image" class="images-width">
+                <h2>Light Setup</h2>
+                <h3>$1200.00</h3>
+                <div class="rating-sec">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <span class="star-point">4.99</span>
+                </div>
+                <div class="product-info">
+                    <p>Wordwide shifting available</p>
+                    <p>Buyers protection possible!</p>
+                </div>
+            </div>
+
+            <div class="product-details">
+                <img src="image/setup.png" alt="image" class="images-width">
+                <h2>Photoshoot set</h2>
+                <h3>$820.40</h3>
+                <div class="rating-sec">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <span class="star-point">4.99</span>
+                </div>
+                <div class="product-info">
+                    <p>Wordwide shifting available</p>
+                    <p>Buyers protection possible!</p>
+                </div>
+            </div>
+
+            <div class="product-details">
+                <img src="image/camera.png" alt="image" class="images-width">
+                <h2>Vlogging Camera</h2>
+                <h3>$1800.80</h3>
+                <div class="rating-sec">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <span class="star-point">4.99</span>
+                </div>
+                <div class="product-info">
+                    <p>Wordwide shifting available</p>
+                    <p>Buyers protection possible!</p>
+                </div>
+            </div>
+
+            <div class="product-details">
+                <img src="image/single-light.png" alt="image" class="images-width">
+                <h2>Green Screen</h2>
+                <h3>$25.48</h3>
+                <div class="rating-sec">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <span class="star-point">4.99</span>
+                </div>
+                <div class="product-info">
+                    <p>Wordwide shifting available</p>
+                    <p>Buyers protection possible!</p>
+                </div>
+            </div>
+
+            <div class="product-details">
+                <img src="image/action.png" alt="image" class="images-width">
+                <h2>Action Camera</h2>
+                <h3>$380.00</h3>
+                <div class="rating-sec">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <span class="star-point">4.99</span>
+                </div>
+                <div class="product-info">
+                    <p>Wordwide shifting available</p>
+                    <p>Buyers protection possible!</p>
+                </div>
+            </div>
+
+        </div>
+      </section>
+    <!-- Product section end -->
+
 </body>
 </html>
 
