full desktop complete

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
     <!-- Product section start -->
       <section class="product-section">
         <div class="container">
+          <div class="all-container">
             <div class="product-details">
                 <img src="image/tripod.png" alt="image" class="images-width">
                 <h2>Flex Tripod</h2>
@@ -251,10 +252,46 @@
                     <p>Buyers protection possible!</p>
                 </div>
             </div>
-
+         </div>
+         <div class="all-product-list">
+            <a href="#" class="btn-more">See More<i class="fa-solid fa-arrow-right"></i></a>
+        </div>
         </div>
       </section>
     <!-- Product section end -->
+
+    <!-- Feature section start -->
+       <section class="feature-section">
+        <div class="container">
+            <div class="feature-img">
+                <img src="image/gear.png" alt="image" class="feature-images">
+            </div>
+            <div class="feature-details">
+                <h1>Featured products at one place</h1>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <a href="#" class="btn-primary">Join Now<i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+        </div>
+       </section>
+    <!-- Feature section start -->
+
+    <!-- Footer section start -->
+       <footer>
+        <div class="container">
+            <div class="footer-details">
+                <h1>Influencer products</h1>
+                <p>Copyright © 2020  influencer products</p>
+                <p>All rights reserved</p>
+                <ul>
+                    <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-dribbble"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
+                </ul>
+            </div>
+        </div>
+       </footer>
+    <!-- Footer section end -->
 
 </body>
 </html>
