--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
             <div class="menu">
                 <div class="list-elements">
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Products</a></li>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#product">Products</a></li>
                         <li><a href="#">Sign up</a></li>
                         <li><a href="#">Log In</a></li>
                         <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
                     </ul>
+                    <i class="fa-solid fa-xmark"></i>
                 </div>
                 <div class="add-to-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
@@ -45,7 +46,7 @@
     <!-- header section end -->
 
     <!-- Banner section start -->
-       <section class="banner-section">
+       <section class="banner-section" id="home">
         <div class="container">
             <div class="banner-details">
                 <h1>Start your Journey as Influencer</h1>
@@ -88,7 +89,7 @@
     <!-- Logo section start -->
 
     <!-- Product section start -->
-      <section class="product-section">
+      <section class="product-section" id="product">
         <div class="container">
           <div class="all-container">
             <div class="product-details">
@@ -293,6 +294,8 @@
        </footer>
     <!-- Footer section end -->
 
+     <!-- main js file link -->
+     <script src="js/main.js"></script>
 </body>
 </html>
 
